--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "test": "vitest"
   },
   "repository": {
@@ -22,14 +22,17 @@
   "homepage": "https://github.com/CaioBritoDev/arquitetura-limpa-e-hexagonal#readme",
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "express": "^5.1.0",
     "uuid": "^13.0.0"
   }
 }
